URL changed according to website

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             $.ajax({
                 type: 'GET',
 
-                url: 'http://localhost/BDCayush/admin/checkexist.php',
+                url: 'http://www.akgec.in/bdc17/admin/checkexist.php',
                 data: {
                     sno: sno
                 },
